Better project structure; Configure output directory and intermediate directory

--- a/WordLearner/WordLearner.vcxproj
+++ b/WordLearner/WordLearner.vcxproj
@@ -10,8 +10,18 @@
       <Platform>x64</Platform>
     </ProjectConfiguration>
   </ItemGroup>
+  <ItemGroup>
+    <ClCompile Include="src\main.cpp" />
+    <ClCompile Include="src\WordLearnerMainWindow.cpp" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtMoc Include="src\WordLearnerMainWindow.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <QtUic Include="src\QtResources\WordLearnerMainWindow.ui" />
+  </ItemGroup>
   <PropertyGroup Label="Globals">
-    <ProjectGuid>{BBB146BF-3D92-473F-8ECF-B86E3570E908}</ProjectGuid>
+    <ProjectGuid>{E08442B5-8338-4981-8216-7AC1C2451798}</ProjectGuid>
     <Keyword>QtVS_v304</Keyword>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">10.0</WindowsTargetPlatformVersion>
     <WindowsTargetPlatformVersion Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">10.0</WindowsTargetPlatformVersion>
@@ -60,8 +70,12 @@
   </ImportGroup>
   <PropertyGroup Label="UserMacros" />
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'">
+    <OutDir>$(SolutionDir)bin\$(Configuration)_$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)bin\intermediate\$(Configuration)_$(Platform)\</IntDir>
   </PropertyGroup>
   <PropertyGroup Condition="'$(Configuration)|$(Platform)' == 'Release|x64'">
+    <OutDir>$(SolutionDir)bin\$(Configuration)_$(Platform)\</OutDir>
+    <IntDir>$(SolutionDir)bin\intermediate\$(Configuration)_$(Platform)\</IntDir>
   </PropertyGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)' == 'Debug|x64'" Label="Configuration">
     <ClCompile>
@@ -91,12 +105,6 @@
       <OptimizeReferences>true</OptimizeReferences>
     </Link>
   </ItemDefinitionGroup>
-  <ItemGroup>
-    <QtUic Include="WordLearnerMainWindow.ui" />
-    <QtMoc Include="WordLearnerMainWindow.h" />
-    <ClCompile Include="WordLearnerMainWindow.cpp" />
-    <ClCompile Include="main.cpp" />
-  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Condition="Exists('$(QtMsBuild)\qt.targets')">
     <Import Project="$(QtMsBuild)\qt.targets" />
