Create Database skeleton; Add classes Word and WordSet; Add example data files; Support cyrillic in console

--- a/Database/Database.vcxproj
+++ b/Database/Database.vcxproj
@@ -81,6 +81,8 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClInclude Include="src\Database.h" />
+    <ClInclude Include="src\Word.h" />
+    <ClInclude Include="src\WordSet.h" />
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="src\Database.cpp" />
