Add ResourceManager for loading resources; Style words list widget better

--- a/WordLearner/WordLearner.vcxproj
+++ b/WordLearner/WordLearner.vcxproj
@@ -11,11 +11,15 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="ResourceManager.cpp" />
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\WordLearnerMainWindow.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\WordLearnerMainWindow.h" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="ResourceManager.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E08442B5-8338-4981-8216-7AC1C2451798}</ProjectGuid>
