--- a/WordLearner/WordLearner.vcxproj.filters
+++ b/WordLearner/WordLearner.vcxproj.filters
@@ -35,12 +35,18 @@
     <ClCompile Include="CreateWordDialog.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="CreateWordSetDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\WordLearnerMainWindow.h">
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="CreateWordDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="CreateWordSetDialog.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
