--- a/WordLearner/WordLearner.vcxproj.filters
+++ b/WordLearner/WordLearner.vcxproj.filters
@@ -38,6 +38,9 @@
     <ClCompile Include="src\ResourceManager.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="src\WordsTableWidget.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\WordLearnerMainWindow.h">
@@ -52,6 +55,9 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ResourceManager.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
+    <ClInclude Include="src\WordsTableWidget.h">
       <Filter>Header Files</Filter>
     </ClInclude>
   </ItemGroup>
