Refactor words table together with createWordButton into a class WordsWidget

--- a/WordLearner/WordLearner.vcxproj
+++ b/WordLearner/WordLearner.vcxproj
@@ -17,6 +17,7 @@
     <ClCompile Include="src\ResourceManager.cpp" />
     <ClCompile Include="src\WordLearnerMainWindow.cpp" />
     <ClCompile Include="src\WordsTableWidget.cpp" />
+    <ClCompile Include="src\WordsWidget.cpp" />
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\WordLearnerMainWindow.h" />
@@ -30,6 +31,7 @@
   <ItemGroup>
     <ClInclude Include="src\ResourceManager.h" />
     <ClInclude Include="src\WordsTableWidget.h" />
+    <ClInclude Include="src\WordsWidget.h" />
   </ItemGroup>
   <PropertyGroup Label="Globals">
     <ProjectGuid>{E08442B5-8338-4981-8216-7AC1C2451798}</ProjectGuid>
