Refactor word sets list into a class WordSetsListWidget

--- a/WordLearner/WordLearner.vcxproj
+++ b/WordLearner/WordLearner.vcxproj
@@ -16,6 +16,7 @@
     <ClCompile Include="src\main.cpp" />
     <ClCompile Include="src\ResourceManager.cpp" />
     <ClCompile Include="src\WordLearnerMainWindow.cpp" />
+    <ClCompile Include="src\WordSetsListWidget.cpp" />
     <ClCompile Include="src\WordsTableWidget.cpp" />
     <ClCompile Include="src\WordsWidget.cpp" />
   </ItemGroup>
@@ -30,6 +31,7 @@
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="src\ResourceManager.h" />
+    <ClInclude Include="src\WordSetsListWidget.h" />
     <ClInclude Include="src\WordsTableWidget.h" />
     <ClInclude Include="src\WordsWidget.h" />
   </ItemGroup>
