--- a/WordLearner/WordLearner.vcxproj
+++ b/WordLearner/WordLearner.vcxproj
@@ -11,6 +11,7 @@
     </ProjectConfiguration>
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="EditNoteDialog.cpp" />
     <ClCompile Include="src\CreateWordDialog.cpp" />
     <ClCompile Include="src\CreateWordSetDialog.cpp" />
     <ClCompile Include="src\main.cpp" />
@@ -31,6 +32,7 @@
     <QtMoc Include="src\CreateWordSetDialog.h" />
   </ItemGroup>
   <ItemGroup>
+    <QtMoc Include="EditNoteDialog.h" />
     <ClInclude Include="src\ResourceManager.h" />
     <ClInclude Include="src\WordSetsListWidget.h" />
     <ClInclude Include="src\WordSetsWidget.h" />
