--- a/WordLearner/WordLearner.vcxproj.filters
+++ b/WordLearner/WordLearner.vcxproj.filters
@@ -50,6 +50,9 @@
     <ClCompile Include="src\WordSetsWidget.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="EditNoteDialog.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <QtMoc Include="src\WordLearnerMainWindow.h">
@@ -59,6 +62,9 @@
       <Filter>Header Files</Filter>
     </QtMoc>
     <QtMoc Include="src\CreateWordSetDialog.h">
+      <Filter>Header Files</Filter>
+    </QtMoc>
+    <QtMoc Include="EditNoteDialog.h">
       <Filter>Header Files</Filter>
     </QtMoc>
   </ItemGroup>
